--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
 				<div class="input-box">
 					<span class="text">Email</span>
-					<input type="email" id="email" placeholder="ashgrover123@gmail.com" required>
+					<input type="email" id="email" placeholder="cse@gmail.com" required>
 				</div>
 
 				<div class="input-box">
 					<span class="text">Branch</span>
-					<input type="text" id="branch" placeholder="Computer Science and Engineering" required>
+					<input type="text" id="branch" placeholder="CSE" required>
 				</div>
 
 				<div class="input-box">
@@ -46,7 +46,7 @@
 
 				<div class="input-box">
 					<span class="text">Preferred Domain</span>
-					<input type="text" id="domain" placeholder="Marketing and Sponsorship" required>
+					<input type="text" id="domain" placeholder="Tech" required>
 				</div>
 
 				<div class="input-box">
@@ -62,8 +62,7 @@
 				<input type="submit" value="Register">
 			</div>
 
-			<p class="text" style="color: #faf9f6;">Note	:	Please fill the details correctly.
-			<br>Domains	:	M&S, Tech, Graphic Designing, Video Editing, Public Relations, Event Management, Social Media.
+			<p class="text" style="color: #faf9f6;">Domains	:	M&S, Tech, Graphic Designing, Video Editing, Public Relations, Event Management, Social Media.
 			</p>
 		</form>
 	</section>
